Archive2/ed/2a820339bad0ee/output
this is fine
-------- now try assigning to arg ----------
main.c:7:9: error: read-only variable is not assignable
    arg = 3 ; // *** error *** can't assign to arg 
    ~~~ ^
1 error generated.
